<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="2dp">

    <ImageView
        android:id="@+id/iv_category_icon"
        android:layout_width="@dimen/image_width"
        android:layout_height="@dimen/image_height"
        android:src="@drawable/ic_broken_image_black_48dp"
        android:contentDescription="@string/hint_for_image" />

    <TextView
        android:id="@+id/tv_category_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_for_id"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_toEndOf="@+id/iv_category_icon"
        />

    <TextView
        android:id="@+id/tv_category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_for_name"
        android:layout_below="@+id/tv_category_id"
        android:layout_toEndOf="@id/iv_category_icon"
        android:layout_alignEnd="@+id/tv_category_id"
        android:layout_alignStart="@+id/tv_category_id"/>


</RelativeLayout>